# nm_evals

./: .env.example  .gitignore  README.md  english_to_korean_evaluator.py  korean_name_cli.py  korean_name_evaluator.py  korean_to_english_evaluator.py  name_eval_system.py  pyproject.toml  real_person_name_verifier.py  requirements.txt  teamwork_integration.py  terminologists_manual_links.py
