[project]
name = "nm-evals"
version = "0.1.0"
description = ""
authors = [
    {name = "isidora",email = "isidora.tourni@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.0.0)",
    "python-dotenv (>=1.0.0)",
    "openai (>=1.0.0)",
    "requests (>=2.31.0)",
    "beautifulsoup4 (>=4.12.0)",
    "pandas (>=2.0.0)",
    "openpyxl (>=3.1.0)",
    "pypdf (==3.17.1)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "python-teamwork (>=0.1.3,<0.2.0)",
    "black (>=25.1.0,<26.0.0)",
    "langsmith (>=0.3.42,<0.4.0)",
    "langchain-core (>=0.3.59,<0.4.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
